--- a/server/src/main/resources/application-test.properties
+++ b/server/src/main/resources/application-test.properties
@@ -1,5 +1,3 @@
-server.port=9090
-
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.format_sql=true
 spring.sql.init.mode=always
@@ -7,4 +5,9 @@ logging.level.org.springframework.orm.jpa=INFO
 logging.level.org.springframework.transaction=INFO
 logging.level.org.springframework.transaction.interceptor=TRACE
 logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
-logging.level.org.hibernate.SQL=DEBUG
+
+# TODO Append connection to H2 DB
+#spring.datasource.driverClassName
+#spring.datasource.url
+#spring.datasource.username
+#spring.datasource.password
